# ticketeate

./: .dockerignore  .env.example  .eslintignore  .gitattributes  .gitignore  .npmrc  .prettierignore  ADMIN_DASHBOARD_README.md  CHEATSHEET-DEMO.md  DEMO-HA-SERVICIOS-REALES.md  DNS_SETUP.md  Dockerfile  EXPLICACION-FAIL.md  FIX_ERROR_500_EVENTOS.md  GUIA-DEMO-COMPLETA.md  GUIA-DEMO-PROFESOR.md  GUIA-PRUEBAS-HA.md  HISTORIAL_COMPRAS.md  IMPLEMENTACION-RNF-03.md  IMPLEMENTACION.md  Makefile  README.md  SCANNER_IMPLEMENTATION_COMPLETE.md  SCANNER_IMPLEMENTATION_GUIDE.md  SCANNER_IMPLEMENTATION_SUMMARY.md  STRIPE_REDIRECT_FIX.md  STRIPE_SUCCESS_IMPLEMENTATION.md  consultar-cupones.js  crear-cupon-test.sql  deploy-nginx.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  redis.conf  tat -an  findstr 3000  (+7 more)
.github/: pull_request_template.md
.github/workflows/: ci.yml  (+21 more)
apps/cli/: Cargo.toml  README.md  package.json
apps/cli/src/: main.rs
backend/: server.js
docs/: ARQUITECTURA-VISUAL-HA.md  HA-ALTA-DISPONIBILIDAD.md  QUICKSTART-HA.md  README.md  RESUMEN-EJECUTIVO-RNF-03.md  VERIFICACION-RNF-03.md  home-improvements.md
infrastructure/: .gitignore  acm.tf  api-gateway.tf  ec2.tf  ecr.tf  github-actions-lambda-policy.json  lambda.tf  main.tf  outputs.tf  security-groups.tf  ssm.tf  tfplan  variables.tf  vpc.tf
scripts/: check_constraint.sql  demo-ha-simple.sh  monitor-ha.sh  test-ha-quick.sh  test-ha-stress.sh  test-ha.sh  test_enum.ts
supabase/: config.toml
(+720 files in other folders)
